tests/bad/nil-assign-bad.pas
program NilAssignBad

type
    PInteger: ^Integer;

var x: Integer;
begin
    x := nil
end.
